# Algovisor

./: run_solution_vs2010.bat  run_solution_vs2012.bat  run_solution_vs2015.bat
doc/: описание_проектов_солюшена.txt
env/: set_env_var.bat
source/: Algovisor_VS2010.sln  Algovisor_VS2012.sln  Algovisor_VS2015.sln
source/ASTSConnector_Tester/: ASTSConnector_Tester.cpp  ASTSConnector_Tester.vcxproj  ASTSConnector_Tester.vcxproj.filters  stdafx.cpp  stdafx.h
source/ASTS_Connector/: ASTS_Connector.cpp  ASTS_Connector.h  ASTS_Connector.vcxproj  ASTS_Connector.vcxproj.filters  stdafx.h
source/Algovisor/: ASProtect 64.props  Algovisor.cpp  Algovisor.h  Algovisor.rc  Algovisor.vcxproj  Algovisor.vcxproj.filters  Algovisor_props.props  Auxiliary_methods.cpp  Auxiliary_methods.h  BaseChart.cpp  BaseChart.h  CQGData.cpp  CQGDialog.cpp  CQGDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  DEFINE.h  HardDriveSerialNumer.cpp  Heat_Map.cpp  Heat_Map.h  Instrument.cpp  Instrument.h  LoginDlg.cpp  LoginDlg.h  MainWindow.cpp  MainWindow.h  NinjaData.cpp  NinjaDialog.cpp  NinjaDialog.h  Plaza2Callbacks.cpp  Plaza2Callbacks.h  Plaza2Dialog.cpp  Plaza2Dialog.h  Plaza2Instruments.cpp  Plaza2Instruments.h  Plaza2ReplayDialog.cpp  Plaza2ReplayDialog.h  PrivateKey.cpp  PrivateKey.h  Quant_Chart.cpp  (+10 more)
source/Algovisor_cli/: Algovisor_cli.aps  Algovisor_cli.vcxproj  Main.cpp  resource.h
source/CQG_Server/: CQG.Trader.Services.CEL.Host.ActiveX.tlb  CQG_Data.cpp  CQG_Server.cpp  CQG_Server.h  CQG_Server.vcxproj  CQG_Server.vcxproj.filters  Main.cpp  cqg.trader.services.cel.host.activex.tlh  cqg.trader.services.cel.host.activex.tli  cqgcel-4_0.tlh  stdafx.h  time&salse.txt
source/DataAnalyser/: BackTester.cpp  BackTester.h  DataAnalyser.vcxproj  DataAnalyser.vcxproj.filters  DataAnalyzerApp.cpp  DataAnalyzerApp.h  Plaza2Callbacks.cpp  Plaza2Callbacks.h  StatisticClasses.cpp  main.cpp  (+5 more)
source/edbExport/: CMakeLists.txt  changelog.txt  edbExport.vcxproj
source/edbExport/Source/: App.cpp  App.h  CheckScheme.cpp  CheckScheme.h  CsvWriter.cpp  CsvWriter.h  DumpWriter.cpp  DumpWriter.h  IWriter.h  edbExport.cpp  printers.cpp  printers.h  resource.h  stdafx.cpp  stdafx.h  ver.rc
(+106 files in other folders)
